--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,7 +34,7 @@ section {
 }
 
 a {
-  color: #fff;
+  color: black;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
@@ -120,6 +120,7 @@ a:hover:after {
 
 
 .skills-wrapper h5 {
+  color: black;
   text-align: center;
    
 } 
