--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,24 +1,122 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 7px;
+  padding: 5px;
   font-family: 'Oxygen', sans-serif;
 }
 
 body {
-  margin: 0;
-  padding: 10px;
+  margin: 10px;
+  padding: 30px;
   background-color:whitesmoke;
   color: black;
+}
+
+body a {
+  color: black
+}
+
+body a:hover {
+  color: grey
 }
 
 section {
   padding: 40px 0 0 0;
 }
 
+/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
+html.has-scroll-smooth {
+  overflow: hidden;
+}
+
+html.has-scroll-dragging {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.has-scroll-smooth body {
+  overflow: hidden;
+}
+
+.has-scroll-smooth [data-scroll-container] {
+  min-height: 100vh;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-container] {
+  height: 100vh;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-section] {
+  display: inline-block;
+  vertical-align: top;
+  white-space: nowrap;
+  height: 100%;
+}
+
+.c-scrollbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 11px;
+  height: 100%;
+  transform-origin: center right;
+  transition: transform 0.3s, opacity 0.3s;
+  opacity: 0;
+}
+
+.c-scrollbar:hover {
+  transform: scaleX(1.45);
+}
+
+.c-scrollbar:hover,
+.has-scroll-scrolling .c-scrollbar,
+.has-scroll-dragging .c-scrollbar {
+  opacity: 1;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar {
+  width: 100%;
+  height: 10px;
+  top: auto;
+  bottom: 0;
+  transform: scaleY(1);
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+  transform: scaleY(1.3);
+}
+
+.c-scrollbar_thumb {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: black;
+  opacity: 0.5;
+  width: 7px;
+  border-radius: 10px;
+  margin: 2px;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.has-scroll-dragging .c-scrollbar_thumb {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+  right: auto;
+  bottom: 0;
+}
+
+
 //Navbar
 .navbar-wrapper {
-  background-color: lightgrey;
+  // background-color: lightgrey;
   a {
     color: black;
     text-decoration: none;
@@ -33,7 +131,7 @@ section {
   height: 5vh;
 }
 
-a {
+.navbar-items a {
   color: black;
   text-transform: uppercase;
   text-decoration: none;
@@ -44,7 +142,7 @@ a {
   position: relative;
 }
 
-a:after {
+.navbar-items a:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
   content: "";
@@ -76,7 +174,7 @@ a:hover:after {
 
   color: black;
   padding: 20px;
-  font-size: 8vh;
+  font-size: 6vh;
   text-align: center
   }
   .fadeInUp1{animation: fadeInUp 1s ease backwards;
@@ -99,6 +197,45 @@ a:hover:after {
       color: grey;
     }
   }
+}
+
+// Return to Top & Sidebar for Links
+
+html {
+  scroll-behavior: smooth;
+}
+
+.to-top {
+  
+  position: fixed;
+  bottom: 2px;
+  right: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  
+}
+
+.to-top a i {
+
+  display: inline-block;
+  padding: 60px;
+  opacity: 1;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.social-links {
+  position: fixed;
+  bottom: 5px;
+  left: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
 }
 
 // Footer
@@ -130,4 +267,6 @@ a:hover:after {
     column-width: 100px;
     text-align: center;
 }
+
+
 
