Updated Links on photos, basic flex display change

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,23 @@ body a:hover {
   color: grey
 }
 
+.lyricle {
+  display: flex
+}
+
+.discoverly {
+  display: flex
+}
+
+.cryptmocash {
+  display: flex
+}
+
+.seipermarioman {
+  display: flex
+}
+
+
 section {
   padding: 40px 0 0 0;
 }
