--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,17 +2,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 5px;
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
   margin: 10px;
-  padding: 30px;
+  padding: 0px 20px 20px 20px;
   background-color:whitesmoke;
   color: black;
 }
 
 body a {
+  text-decoration: none;
   color: black
 }
 
@@ -20,8 +21,20 @@ body a:hover {
   color: grey
 }
 
+body p {
+  font-size: 20px;
+line-height: 1.6;
+}
+
+body h1 {
+  font-weight:bold;
+}
+
+// PROJECT CONTAINERS
+
 .lyricle {
-  display: flex
+  display: flex;
+  width: 30vw
 }
 
 .discoverly {
@@ -35,6 +48,43 @@ body a:hover {
 .seipermarioman {
   display: flex
 }
+
+// PROJECT TEXT 
+
+.project-text {
+  padding-right: 45px;
+  margin-bottom: 80vh;
+}
+
+.project-text h2 {
+ font-size: 10vh;
+ padding: 50px 0 10px 0 
+}
+
+.project-text h3  {
+font-size: 5vh;
+font-style: italic;
+padding: 0px 0 10px 0
+}
+
+.project-text a {
+font-size: 2vh;
+padding: 0px 
+}
+
+.project-text li {
+  font-size: 2vh;
+  
+  
+}
+
+
+
+// .navbar-wrapper {
+//   display: flex;
+//   justify-content: center;
+//   position: relative
+// }
 
 
 section {
@@ -130,10 +180,15 @@ html.has-scroll-dragging {
   bottom: 0;
 }
 
+.header {
+  
+}
 
 //Navbar
 .navbar-wrapper {
   // background-color: lightgrey;
+  margin-top: -40px;
+    width: 100%;
   a {
     color: black;
     text-decoration: none;
@@ -141,6 +196,7 @@ html.has-scroll-dragging {
 }
 
 .navbar-items {
+  
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -190,16 +246,41 @@ a:hover:after {
 .hero-section {
 
   color: black;
-  padding: 20px;
+ height: 90vh;
   font-size: 6vh;
   text-align: center
   }
-  .fadeInUp1{animation: fadeInUp 1s ease backwards;
-  animation-delay: .1s;}
+  .fadeInUp1{animation: fadeInUp 1.5s ease backwards;
+  animation-delay: 0s;}
   .fadeInUp2 {
-          animation: fadeInUp 1s ease backwards;
-          animation-delay: .3s;
-        }
+  animation: fadeInUp 1.3s ease backwards;
+  animation-delay: .3s;
+  }
+  .fadeInUp3 {
+  animation: fadeInUp 1.3s ease backwards;
+  animation-delay: .5s;
+  }
+
+.hero-section h1 {
+  font-weight:400;
+      font-size: 10vw ;
+    }
+
+#ashley-gyngell-avatar {
+  height: 40vh;
+}
+
+// About
+
+#about p { 
+font-size: 20px;
+  line-height: 1.6;
+  text-align: center;
+  padding: 0 10vw 0 10vw;
+}
+
+
+
 
 
 // Contact
@@ -273,11 +354,14 @@ html {
 
 
 
-.skills-wrapper h5 {
-  color: black;
-  text-align: center;
-   
+.skills-wrapper p {
+  word-spacing: 1.5rem;
 } 
+
+.skills-wrapper h2 {
+  font-size: 2vw;
+  margin-top: 1vw;
+}
 
 .skills-grid{
   column-count: 2;
@@ -285,5 +369,33 @@ html {
     text-align: center;
 }
 
+#lyricle-screenshot-ipad {
+  position: absolute ;
+    top: 0px;
+      right: -60vw;
+      height: 40vw;
+      max-height: fit-content;
+      width: auto;
+      
+}
+
+#lyricle-screenshot-mac {
+position: absolute;
+    top: 5vw;
+    right: -20vw;
+    height: 40vw;
+    max-height: fit-content;
+    width: auto;
+    
+}
+
+#lyricle-screenshot-phone {
+  position: absolute;
+    top: 20vw;
+    right: -40vw;
+    height: 48vw;
+    max-height: fit-content;
+    width: auto;
+}
 
 
