--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,15 +38,18 @@ body h1 {
 }
 
 .discoverly {
-  display: flex
+  display: flex;
+  width: 30vw
 }
 
 .cryptmocash {
-  display: flex
+  display: flex;
+  width: 30vw
 }
 
 .seipermarioman {
-  display: flex
+  display: flex;
+  width: 30vw
 }
 
 // PROJECT TEXT 
@@ -364,7 +367,7 @@ html {
 } 
 
 .skills-wrapper h2 {
-  font-size: 2vw;
+  font-size: 20px;
   margin-top: 1vw;
 }
 
@@ -396,11 +399,40 @@ position: absolute;
 
 #lyricle-screenshot-phone {
   position: absolute;
-    top: 20vw;
-    right: -40vw;
-    height: 48vw;
+    top: 1vw;
+    right: -65vw;
+    height: 50vw;
     max-height: fit-content;
     width: auto;
+}
+
+#discoverly-screenshot-ipad {
+  position: absolute;
+  top: 30px;
+  right: -60vw;
+  height: 30vw;
+  max-height: fit-content;
+  width: auto;
+
+}
+
+#discoverly-screenshot-ipad2 {
+  position: absolute;
+  top: 5vw;
+  right: -60vw;
+  height: 40vw;
+  max-height: fit-content;
+  width: auto;
+
+}
+
+#discoverly-screenshot-phone {
+  position: absolute;
+  top: 20vw;
+  right: -56vw;
+  height: 38vw;
+  max-height: fit-content;
+  width: auto;
 }
 
 
