--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@ body a {
 
 body a:hover {
   color: grey
+  
 }
 
 body p {
@@ -28,8 +29,17 @@ line-height: 1.6;
 }
 
 body h1 {
-  font-weight:bold;
+  font-weight: lighter;
+  font-size: 5vh;
+  text-align: center;
 }
+
+body h3 {
+  font-weight: lighter;
+  font-size: 3vh;
+  text-align: center;
+}
+
 
 // PROJECT CONTAINERS
 
@@ -257,25 +267,26 @@ a:hover:after {
   font-size: 6vh;
   text-align: center
   }
-  .fadeInUp1{animation: fadeInUp 1.5s ease backwards;
+  .fadeInUp1{animation: fadeInDown 1s ease backwards;
   animation-delay: 0s;}
   .fadeInUp2 {
-  animation: fadeInUp 1.3s ease backwards;
-  animation-delay: .3s;
+  animation: fadeIn 1.5s ease backwards;
+  animation-delay: .9s;
   }
   .fadeInUp3 {
-  animation: fadeInUp 1.3s ease backwards;
-  animation-delay: .5s;
+  animation: fadeInUp 1.1s ease backwards;
+  animation-delay: .9s;
   }
     .fadeInUp4 {
-      animation: fadeInUp 1.3s ease backwards;
-      animation-delay: 1s;
+      animation: fadeInDown 1.1s ease backwards;
+      animation-delay: .7s;
       color: red;
     }
 
 .hero-section h1 {
   font-weight:400;
-      font-size: 10vw ;
+      font-size: 10vw;
+      
     }
 
 #ashley-gyngell-avatar {
@@ -354,6 +365,20 @@ html {
   margin: 30px;
 }
 
+
+@keyframes fadeIn {
+  0% {
+    transform: translate(0px, 0px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0px, 0);
+    opacity: 1;
+  }
+}
+
+
 @keyframes fadeInUp{0% {
     transform: translate(0px, 100px);
     opacity: 0;
@@ -365,20 +390,31 @@ html {
   }
 }
 
+@keyframes fadeInDown {
+  0% {
+    transform: translate(0px, -100px,);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0px, 0);
+    opacity: 1;
+  }
+}
 
 
 .skills-wrapper p {
-  word-spacing: 1.5rem;
+  word-spacing: 0.7rem;
 } 
 
 .skills-wrapper h2 {
-  font-size: 20px;
+  font-size: 25px;
   margin-top: 1vw;
 }
 
 .skills-grid{
   column-count: 2;
-    column-width: 100px;
+    column-width: 40vw;
     text-align: center;
 }
 
@@ -474,36 +510,20 @@ position: absolute;
   position: absolute;
   top: 50vw;
 right: -62vw;
-  height: 35vw;
+  height: 38vw;
   max-height: fit-content;
   width: auto;
 }
 
-#lyricle-screenshot-1 {
-  position: absolute;
-  top: -20vw;
-  right: 35vw;
-  height: 40vw;
-  
-  width: auto;}
+// #seipermarioman-screenshot-mac2 {
+//   position: absolute;
+//     top: 50vw;
+//     right: -80vw;
+//     height: 40vw;
+//     max-height: fit-content;
+//     width: auto;
+// }
 
-#lyricle-screenshot-2 {
-  position: absolute;
-    top: 40vh;
-    right: 0vw;
-    height: 35vw;
-    max-height: fit-content;
-    width: auto;
-}
-
-#lyricle-screenshot-3 {
-  position: absolute;
-    top: 10vw;
-    right: -5vw;
-    height: 40vw;
-    max-height: fit-content;
-    width: auto;
-}
 
 
 .image-pop {
@@ -527,7 +547,9 @@ width: 30vw
 
 
 .project-text h2:hover {
-  color: grey;
+  color: grey
+  ;
+  
 }
 
 .project-text h2 {
