updated transition settings

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@ body a:hover {
 body p {
   font-size: 20px;
 line-height: 1.6;
+
 }
 
 body h1 {
@@ -302,7 +303,17 @@ font-size: 20px;
   padding: 0 10vw 0 10vw;
 }
 
+// Interests
 
+.interests-wrapper p {
+  text-align: center;
+}
+
+// Interests
+
+.experience-wrapper  {
+  text-align: center;
+}
 
 
 
