fix tablet scrolling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,6 +70,9 @@ body h3 {
 
 // PROJECT TEXT 
 
+.project-title {
+  color: green;
+}
 
 
 .project-text {
@@ -198,9 +201,6 @@ html.has-scroll-dragging {
   bottom: 0;
 }
 
-.header {
-  
-}
 
 //Navbar
 .navbar-wrapper {
