--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,13 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 5px;
+  padding: 0;
   font-family: 'Raleway', sans-serif;
 }
 
 body {
-  margin: 10px;
-  padding: 0px 20px 20px 20px;
+  
+  padding: 0px 0px 20px 0px;
   background-color:whitesmoke;
   color: black;
   height: 100vh
@@ -19,12 +19,13 @@ body a {
 }
 
 body a:hover {
-  color: grey
-  
+  color: rgb(136, 135, 135);
+
+
 }
 
 body p {
-  font-size: 20px;
+  font-size: 3vh;
 line-height: 1.6;
 
 }
@@ -33,6 +34,7 @@ body h1 {
   font-weight: lighter;
   font-size: 5vh;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 body h3 {
@@ -47,10 +49,29 @@ body h3 {
 .lyricle {
   display: flex;
   width: 30vw;
-  height: 250vh
+  height: 250vh;
+  margin: 5vh;
 }
 
+
+
+.lyricle-text{
+  display: flex;
+  width: 30vw;
+  height: 250vh;
+  
+}
+
+
+
 .discoverly {
+  display: flex;
+  width: 30vw;
+  height: 250vh;
+  margin: 5vh;
+}
+
+.discoverly-text {
   display: flex;
   width: 30vw;
   height: 250vh
@@ -59,44 +80,61 @@ body h3 {
 .cryptmocash {
   display: flex;
   width: 30vw;
-  height: 250vh
+  height: 250vh;
+  margin: 5vh;
 }
 
-.seipermarioman {
+.cryptmocash-text {
   display: flex;
   width: 30vw;
   height: 250vh
 }
 
+
+.seipermarioman {
+  display: flex;
+  width: 30vw;
+  height: 250vh;
+  margin: 5vh;
+}
+
+.seipermarioman-text {
+  display: flex;
+  width: 30vw;
+  height: 250vh
+}
 // PROJECT TEXT 
 
 .project-title {
-  color: green;
+  margin: 5vw 0 -5vw ;
 }
-
 
 .project-text {
   padding-right: 45px;
   margin-bottom: 145vh;
-
-}
-
-.project-text h2 {
+ padding: 20px 20px 0 20px;
+  h2 {
  font-size: 10vh;
  padding: 50px 0 15px 0 
 }
-
-.project-text h3  {
-font-size: 5vh;
-font-style: italic;
-padding: 0px 0 10px 0
 }
 
-.project-text a {
-font-size: 2vh;
-padding: 0px 
+
+
+.project-text h2:hover {
+  color:white;
+  transition: 1s;
+  transition-delay: .3s;
+  font-size: 10vh;
+  padding: 50px 0 15px 0
 }
 
+
+
+#project-github:hover {
+  color: green;
+transform: scale(2);
+}
 
 
 
@@ -205,11 +243,13 @@ html.has-scroll-dragging {
 //Navbar
 .navbar-wrapper {
   // background-color: lightgrey;
-  margin-top: -40px;
+  margin-top: -10px;
     width: 100%;
   a {
     color: black;
     text-decoration: none;
+    font-size: 15px;
+    
   }
 }
 
@@ -220,9 +260,8 @@ html.has-scroll-dragging {
   align-items: center;
   list-style-type: none;
   height: 5vh;
-}
-
-.navbar-items a {
+  
+  a {
   color: black;
   text-transform: uppercase;
   text-decoration: none;
@@ -231,7 +270,7 @@ html.has-scroll-dragging {
   display: inline-block;
   padding: 15px 20px;
   position: relative;
-}
+}}
 
 .navbar-items a:after {
   background: none repeat scroll 0 0 transparent;
@@ -264,7 +303,7 @@ a:hover:after {
 .hero-section {
 
   color: black;
- height: 90vh;
+ height: 100vh;
   font-size: 6vh;
   text-align: center
   }
@@ -294,25 +333,203 @@ a:hover:after {
   height: 40vh;
 }
 
+.hero-section h2 {
+  font-size: 5vh;
+}
+
+// SKILLS 
+
+
+
+.skills-wrapper p {
+  word-spacing: 0.7rem;
+}
+
+.skills-wrapper h2 {
+  font-size: 25px;
+  margin-top: 1vw;
+}
+
+.skills-grid {
+  display: flexbox;
+  flex-wrap: wrap;
+  column-count: 5;
+  padding: 0 25vw;
+  text-align: center;
+  font-size: 8vh;
+}
+
+.skill:hover {
+  
+      transform: scale(1.11);
+      transition: 0.1s;
+}
+
+  
+  .devicon-html5-plain:hover {  
+  color: #E54D26;
+  transition: 0.15s;    
+}
+
+.devicon-css3-plain:hover {
+  color: #3C8FC6;
+  transition: 0.15s;
+}
+
+.devicon-javascript-plain:hover {
+  color: #F0DB4F;
+  transition: 0.15s;
+}
+
+.devicon-react-original:hover {
+  color: #61D9FB;
+  transition: 0.15s;
+}
+
+.devicon-python-plain:hover {
+  color: #FFD846;
+  transition: 0.15s;
+}
+
+.devicon-django-plain:hover {
+  color: #092E20;
+  transition: 0.15s;
+}
+
+.devicon-postgresql-plain:hover {
+  color: #336890;
+  transition: 0.15s;
+}
+
+.devicon-nodejs-plain:hover {
+  color: #83CD29;
+  transition: 0.15s;
+}
+
+.devicon-npm-original-wordmark:hover {
+  color: #CB3837;
+  transition: 0.15s;
+}
+
+.devicon-express-original:hover {
+  color: #444444;
+  transition: 0.15s;
+}
+
+.devicon-mongodb-plain:hover {
+  color: #4FAA41;
+  transition: 0.15s;
+}
+
+
+
+.devicon-github-original:hover {
+  color: #24292F;
+  transition: 0.15s;
+}
+
+.devicon-heroku-original:hover {
+  color: #6762A6;
+  transition: 0.15s;
+}
+
+.devicon-vscode-plain:hover {
+  color: #3C99D4;
+  transition: 0.15s;
+}
+
+.devicon-git-plain:hover {
+  color: #F34E29;
+  transition: 0.15s;
+}
+
+.devicon-sass-plain:hover {
+  color: #CC6699;
+  transition: 0.15s;
+}
+.devicon-bulma-plain:hover {
+color: #0AD0B2;
+  transition: 0.15s;
+}
+
+.devicon-slack-plain:hover {
+  color: #4A154B;
+    transition: 0.15s;
+    
+}
+
+.devicon-trello-plain:hover {
+  color: #2683FF;
+  transition: 0.15s}
+
+.iconify:hover {
+  color: #38AEBA;
+    transition: 0.15s;
+}
+
+
+
 // About
 
+
+
 #about p { 
-font-size: 20px;
   line-height: 1.6;
   text-align: center;
-  padding: 0 10vw 0 10vw;
+  padding: 30px 10vw 0 10vw;
+}
+
+.about-wrapper {
+  padding: 0 0 60px 0
 }
 
 // Interests
 
-.interests-wrapper p {
+.interests-text {
+  padding: 0 15vh;
+    display: grid;
+    justify-content: center;
+    gap: 8vh;
+    grid-template-columns: 20% 20% 20% 20%;
+    text-align: center;
+}
+
+// Experience
+
+
+
+.experience-text {
+  padding: 0 15vh;
+  display: grid;
+  justify-content: center;
+  gap: 8vh;
+  grid-template-columns: 30% 30% 30%;
   text-align: center;
 }
 
-// Interests
 
-.experience-wrapper  {
-  text-align: center;
+
+.experience-text h2 {
+  font-size: 4.8vh;
+  text-transform: uppercase;
+}
+
+.experience-text h3 {
+  font-size: 2vh;
+  text-transform: uppercase;
+}
+
+.experience-text h4 {
+  padding-bottom: 5vh;
+  font-size: 2.6vh;
+  font-weight: 200;
+  text-transform: uppercase;
+
+
+}
+
+.experience-wrapper p {
+  padding-bottom: 18px;
 }
 
 
@@ -320,60 +537,47 @@ font-size: 20px;
 // Contact
 .contact-wrapper {
   text-align: center;
-  .contact-icons {
+  height: 30vh;
+.contact-icons {
     display: flex;
     width: 25%;
     justify-content: space-around;
-    margin: 0 auto;
-    a {
-      color: grey;
-    }
+    margin:  auto 
   }
 }
 
-// Return to Top & Sidebar for Links
-
-html {
-  scroll-behavior: smooth;
+.contact-icons a:hover {
+  transform: scale(1.2);
+    transition: 0.1s;
 }
 
-.to-top {
-  
-  position: fixed;
-  bottom: 2px;
-  right: 2px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 20px;
-  
-}
+//SideBar With Links
 
-.to-top a i {
-
-  display: inline-block;
-  padding: 60px;
-  opacity: 1;
-}
-
-.hidden {
-  opacity: 0;
-}
 
 .social-links {
   position: fixed;
+  
   bottom: 5px;
-  left: 5px;
+  left: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 20px;
+  font-size: 30px;
 }
+
+.social-links a{
+  padding: 3px 0 3px 0;
+}
+.social-links a:hover {
+  transform: scale(1.2);
+  transition: 0.15s;
+}
+
 
 // Footer
 .footer {
   text-align: center;
-  margin: 30px;
+  margin: -60px 0 10px 0;
 }
 
 
@@ -414,20 +618,7 @@ html {
 }
 
 
-.skills-wrapper p {
-  word-spacing: 0.7rem;
-} 
 
-.skills-wrapper h2 {
-  font-size: 25px;
-  margin-top: 1vw;
-}
-
-.skills-grid{
-  column-count: 2;
-    column-width: 40vw;
-    text-align: center;
-}
 
 
 #lyricle-screenshot-ipad {
@@ -461,7 +652,7 @@ position: absolute;
 
 #discoverly-screenshot-ipad {
   position: absolute;
-  top: 35vw;
+  top: 25vw;
   right: -52vw;
   height: 38vw;
   max-height: fit-content;
@@ -471,8 +662,8 @@ position: absolute;
 
 #discoverly-screenshot-ipad2 {
   position: absolute;
-  top: 60vw;
-  right: -62vw;
+  top: 50vw;
+  right: -60vw;
   height: 30vw;
   max-height: fit-content;
   width: auto;
@@ -481,7 +672,7 @@ position: absolute;
 
 #discoverly-screenshot-phone {
   position: absolute;
-  top: 50vw;
+  top: 40vw;
   right: -56vw;
   height: 35vw;
   max-height: fit-content;
@@ -490,7 +681,7 @@ position: absolute;
 
 #cryptmocash-screenshot-ipad {
   position: absolute;
-  top: 40vh;
+  top: 60vh;
   right: -60vw;
   height: 30vw;
   max-height: fit-content;
@@ -500,7 +691,7 @@ position: absolute;
 
 #cryptmocash-screenshot-ipad2 {
   position: absolute;
-  top: 35vw;
+  top: 40vw;
   right: -58vw;
   height: 40vw;
   max-height: fit-content;
@@ -510,7 +701,7 @@ position: absolute;
 
 #cryptmocash-screenshot-iphone {
   position: absolute;
-  top: -10vw;
+  top: -20vw;
   right: -56vw;
   height: 38vw;
   max-height: fit-content;
@@ -519,21 +710,23 @@ position: absolute;
 
 #seipermarioman-screenshot-mac1 {
   position: absolute;
-  top: 50vw;
-right: -62vw;
-  height: 38vw;
+  top: 58vw;
+right: -64vw;
+  height: 28vw;
   max-height: fit-content;
   width: auto;
 }
 
-// #seipermarioman-screenshot-mac2 {
-//   position: absolute;
-//     top: 50vw;
-//     right: -80vw;
-//     height: 40vw;
-//     max-height: fit-content;
-//     width: auto;
-// }
+
+
+#seipermarioman-screenshot-mac2 {
+  position: absolute;
+    top: 37vw;
+    right: -50vw;
+    height: 30vw;
+    max-height: fit-content;
+    width: auto;
+}
 
 
 
@@ -548,19 +741,30 @@ right: -62vw;
 
 .project-text p {
 width: 30vw
-
 }
+
 
 .project-text h1 {
   text-transform: uppercase;
   display: inline-block;
+  padding: 0 0 20px 0
 }
 
 
-.project-text h2:hover {
-  color: grey
+
+.project-text h2 a:hover {
+  color: white
   ;
   
+}
+
+.project-github {
+  position: absolute;
+}
+.project-github:hover {
+  
+transform: scale(1.1);
+  transition: 0.15s;
 }
 
 .project-text h2 {
@@ -568,7 +772,10 @@ width: 30vw
   text-transform: uppercase;
   text-decoration: none;
  
-  display: inline-block;
-  position: relative;
+  
+  
 }
+
+
+
 
