--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -507,8 +507,6 @@ color: #0AD0B2;
   text-align: center;
 }
 
-
-
 .experience-text h2 {
   font-size: 4.8vh;
   text-transform: uppercase;
@@ -524,14 +522,17 @@ color: #0AD0B2;
   font-size: 2.6vh;
   font-weight: 200;
   text-transform: uppercase;
-
-
 }
 
 .experience-wrapper p {
   padding-bottom: 18px;
 }
 
+
+#experience-logo {
+  height: 5vh;
+ 
+}
 
 
 // Contact
