--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 
 body {
   
-  padding: 0px 0px 20px 0px;
+  padding: 0px 20px 0px;
   background-color:whitesmoke;
   color: black;
   height: 100vh
@@ -34,7 +34,7 @@ body h1 {
   font-weight: lighter;
   font-size: 5vh;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 2vh;
 }
 
 body h3 {
@@ -131,10 +131,6 @@ body h3 {
 
 
 
-#project-github:hover {
-  color: green;
-transform: scale(2);
-}
 
 
 
@@ -499,15 +495,18 @@ color: #0AD0B2;
 
 
 .experience-text {
-  padding: 0 15vh;
+  padding: 0 7vh;
   display: grid;
   justify-content: center;
-  gap: 8vh;
+  gap: 10vh;
   grid-template-columns: 30% 30% 30%;
   text-align: center;
 }
 
+
+
 .experience-text h2 {
+  padding-top: 2vh;
   font-size: 4.8vh;
   text-transform: uppercase;
 }
@@ -625,7 +624,7 @@ color: #0AD0B2;
 #lyricle-screenshot-ipad {
   position: absolute ;
     top: -15vw;
-      right: -57vw;
+      right: -59vw;
       height: 40vw;
       max-height: fit-content;
       width: auto;
@@ -635,7 +634,7 @@ color: #0AD0B2;
 #lyricle-screenshot-mac {
 position: absolute;
     top: 45vw;
-    right: -20vw;
+    right: -22vw;
     height: 42vw;
     max-height: fit-content;
     width: auto;
@@ -645,7 +644,7 @@ position: absolute;
 #lyricle-screenshot-phone {
   position: absolute;
     top: 40vw;
-    right: -60vw;
+    right: -63vw;
     height: 47vw;
     max-height: fit-content;
     width: auto;
@@ -654,8 +653,8 @@ position: absolute;
 #discoverly-screenshot-ipad {
   position: absolute;
   top: 25vw;
-  right: -52vw;
-  height: 38vw;
+  right: -54vw;
+  height: 37vw;
   max-height: fit-content;
   width: auto;
 
@@ -664,8 +663,8 @@ position: absolute;
 #discoverly-screenshot-ipad2 {
   position: absolute;
   top: 50vw;
-  right: -60vw;
-  height: 30vw;
+  right: -61vw;
+  height: 28vw;
   max-height: fit-content;
   width: auto;
 
@@ -674,7 +673,7 @@ position: absolute;
 #discoverly-screenshot-phone {
   position: absolute;
   top: 40vw;
-  right: -56vw;
+  right: -58vw;
   height: 35vw;
   max-height: fit-content;
   width: auto;
@@ -682,7 +681,7 @@ position: absolute;
 
 #cryptmocash-screenshot-ipad {
   position: absolute;
-  top: 60vh;
+  top: 65vh;
   right: -60vw;
   height: 30vw;
   max-height: fit-content;
@@ -692,8 +691,8 @@ position: absolute;
 
 #cryptmocash-screenshot-ipad2 {
   position: absolute;
-  top: 40vw;
-  right: -58vw;
+  top: 41vw;
+  right: -56vw;
   height: 40vw;
   max-height: fit-content;
   width: auto;
@@ -702,8 +701,8 @@ position: absolute;
 
 #cryptmocash-screenshot-iphone {
   position: absolute;
-  top: -20vw;
-  right: -56vw;
+  top: -30vw;
+  right: -62vw;
   height: 38vw;
   max-height: fit-content;
   width: auto;
@@ -758,6 +757,7 @@ width: 30vw
   ;
   
 }
+
 
 .project-github {
   position: absolute;
